src/sections/SubscribeForm/SubscribeForm.scss
.subscribe {
  padding-block: var(--section-padding-y);

  &__inner {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 80px;
    text-align: center;
    background: url('@/assets/images/subscribe-form/subscribe-bg.jpg') 50% 100%/cover no-repeat;
    border-radius: var(--border-radius-m);

    @include mobile {
      padding: 60px;
      border-radius: var(--border-radius);
    }

    @include mobile-s {
      padding: 30px 15px;
    }
  }

  &__title {
    &:not(:last-child) {
      margin-bottom: 24px;
    }
  }

  &__description {
    max-width: 620px;
    color: var(--color-black-600);

    &:not(:last-child) {
      margin-bottom: fluid(64, 24);
    }
  }

  &__form {
    display: flex;
    justify-content: space-between;
    width: 100%;
    max-width: 480px;

    @include mobile-above {
      padding: 10px;
      background-color: var(--color-white);
      border: 2px solid transparent;
      border-radius: 24px;
    }

    @include mobile {
      flex-direction: column;
      row-gap: 10px;
    }

    &:has(.subscribe__input:focus) {
      border-color: var(--color-black);
    }
  }

  &__input {
    width: 100%;
    min-height: 60px;
    padding-inline: 22px;
    border: none;
    border-radius: var(--border-radius);
    font-size: 14px;
    font-weight: 500;

    @include mobile {
      border-radius: var(--border-radius-xxs);
    }

    &::placeholder {
      color: var(--color-black-400);
    }

    &:focus-visible {
      outline: none;
    }
  }
}

